--- a/index.html
+++ b/index.html
@@ -45,19 +45,19 @@
   </header>
 
   <main class="hero py-5 w-100" id="home">
-    <section class="container d-flex flex-between">
+    <section class="container d-flex flex-between hero-section">
       <div class="flex-item-1 p-2 ">
         <h1 class="title mb-3">Mulheres de obra</h1>
         <p class="mb-3">Qualidade, preço acessível e o melhor serviço de acabamento do nordeste!
           A única empresa totalmente feminina de construção civil do estado de Sergipe.</p>
         <div class="d-flex flex-start">
-          <button class="mr-2"><img src="./assets/svg/whatsapp.svg" alt="whatsapp"> Fale Conosco</button>
+          <button class="mr-2 wpp-button"><img src="./assets/svg/whatsapp.svg" alt="whatsapp"> Fale Conosco</button>
           <span class="link-button">Acompanhe</span>
         </div>
       </div>
       <div class="content-video">
         <div class="responsive-video flex-item-2 p-2">
-          <iframe width="700" height="400" src="https://www.youtube.com/embed/pAD0tOumsyw" title="YouTube video player"
+          <iframe class="video" src="https://www.youtube.com/embed/pAD0tOumsyw" title="YouTube video player"
             frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen></iframe>
@@ -94,8 +94,8 @@
   </section>
 
   <section class="container py-5" id="servicos">
-    <div>
-      <div>
+    <div class="flex-item-1">
+      <div class="flex-item-1">
         <h2 class="title-section mb-3">Nossos Serviços</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quis pellentesque vulputate at mattis nibh nulla
           est.
@@ -104,7 +104,7 @@
           Quis pellentesque vulputate at mattis nibh nulla est. Pharetra, eget purus tortor nibh porta ipsum enim urna
           viverra.</p>
       </div>
-      <div class="d-flex flex-between">
+      <div class="d-flex flex-between content-services">
         <ul class="mt-3 mr-3">
           <li class="d-flex flex-start">
             <div class="check mr-2">
@@ -142,7 +142,7 @@
           </li>
           <span class="link-button mt-3">Saiba Mais</span>
         </ul>
-        <div>
+        <div class="container-swiper">
           <div class="swiper">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
@@ -168,22 +168,22 @@
   <section class="container py-5" id="clientes">
     <div class="w-100">
       <h2 class="title-section mb-4">Nossos Clientes</h2>
-      <div class="d-flex flex-between">
-        <div class="card mr-3">
-          <img src="./assets/img/client.png" alt="client" class="my-2">
-          <h4 class="mt-2">Amanda Silva</h4>
-          <p class="mt-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-            Quis pellentesque vulputate at mattis nibh nulla est.
-            Pharetra, eget purus tortor nibh porta ipsum enim urna viverra.</p>
+      <div class="clients">
+        <div class="card">
+          <img src="./assets/img/client1.jpg" alt="client" class="my-2">
+          <h4 class="mt-2">Jô Costa</h4>
+          <p class="mt-2">Vocês foram anjos que chegaram para nos tranquilizar e 
+            fechar com chave de ouro a nossa tão sonhada reforma! Gratidão a Deus e 
+            a essas mulheres profissionais que monstram sua força e capacidade.</p>
         </div>
-        <div class="card mr-3">
-          <img src="./assets/img/client.png" alt="client" class="my-2">
-          <h4 class="mt-2">Amanda Silva</h4>
-          <p class="mt-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-            Quis pellentesque vulputate at mattis nibh nulla est.
-            Pharetra, eget purus tortor nibh porta ipsum enim urna viverra.</p>
+        <div class="card">
+          <img src="./assets/img/client2.jpg" alt="client" class="my-2">
+          <h4 class="mt-2">Douglas Jesus</h4>
+          <p class="mt-2">Melhores profissionais de pintura que já conheci.. A preocupação com os mínimos detalhes é impressionante.
+            Quero agradecer a mulheres de obra na pessoa da Rafaela Viana, juntamente com as colaboradoras por esse serviço que ficou show! 
+          </p>
         </div>
-        <div class="card mr-3">
+        <div class="card">
           <img src="./assets/img/client.png" alt="client" class="my-2">
           <h4 class="mt-2">Amanda Silva</h4>
           <p class="mt-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -226,7 +226,7 @@
             Quis pellentesque vulputate at mattis nibh nulla est.
             Pharetra, eget purus tortor nibh porta ipsum enim urna viverra.</p>
           <div class="d-flex flex-start">
-            <button class="mr-2"><img src="./assets/svg/whatsapp.svg" alt="whatsapp"> Fale Conosco</button>
+            <button class="mr-2 wpp-button"><img src="./assets/svg/whatsapp.svg" alt="whatsapp"> Fale Conosco</button>
             <span class="link-button">Acompanhe</span>
           </div>
         </div>
@@ -266,7 +266,7 @@
           <img src="./assets/svg/youtube.svg" alt="youtube">
         </div>
       </div>
-      <div>
+      <div class="logo-footer">
         <img src="./assets/svg/loog-big.svg" alt="logo mulheres de obra, tamanho grande">
       </div>
     </section>
