--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <a href="#home"><img src="./assets/svg/logo.svg" alt="Mulheres de obra" onload="SVGInject(this)"></a>
       </div>
       <ul class="menu-desktop">
-        <li class="menu-item">
+        <li class="menu-item sobre">
           <a class="item-link" href="#sobre"> Sobre nós</a>
         </li>
         <li class="menu-item">
@@ -34,7 +34,7 @@
         <li class="menu-item">
           <a class="item-link" href="#clientes">Clientes</a>
         </li>
-        <li class="menu-item">
+        <li class="menu-item reconhecimento">
           <a class="item-link" href="#reconhecimento">Reconhecimento</a>
         </li>
         <li class="menu-item">
