adicionando seções extras

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <a class="item-link" href="#servicos">Serviços</a>
         </li>
         <li class="menu-item">
-          <a class="item-link" href="#clientes">Clientes</a>
+          <a class="item-link" href="#depoimentos">Depoimentos</a>
         </li>
         <li class="menu-item reconhecimento">
           <a class="item-link" href="#reconhecimento">Reconhecimento</a>
@@ -51,8 +51,10 @@
         <p class="mb-3">Qualidade, preço acessível e o melhor serviço de acabamento do nordeste!
           A única empresa totalmente feminina de construção civil do estado de Sergipe.</p>
         <div class="d-flex flex-start">
-          <button class="mr-2 wpp-button"><img src="./assets/svg/whatsapp.svg" alt="whatsapp"> Fale Conosco</button>
-          <span class="link-button">Acompanhe</span>
+          <a href="https://bit.ly/3Db9cJc" target="_blank">
+            <button class="mr-2 wpp-button"><img src="./assets/svg/whatsapp.svg" alt="whatsapp"> Fale Conosco</button>
+          </a>
+          <a class="link-button" href="https://www.instagram.com/mulheresdeobra/" target="_blank">Acompanhe</a>
         </div>
       </div>
       <div class="content-video">
@@ -140,7 +142,7 @@
               </p>
             </div>
           </li>
-          <span class="link-button mt-3">Saiba Mais</span>
+          <a class="link-button mt-3" href="https://www.instagram.com/mulheresdeobra/" target="_blank">Saiba Mais</a>
         </ul>
         <div class="container-swiper">
           <div class="swiper">
@@ -165,9 +167,9 @@
     </div>
   </section>
 
-  <section class="container py-5" id="clientes">
+  <section class="container py-5" id="depoimentos">
     <div class="w-100">
-      <h2 class="title-section mb-4">Nossos Clientes</h2>
+      <h2 class="title-section mb-4">Depoimentos</h2>
       <div class="clients">
         <div class="card">
           <img src="./assets/img/client1.jpg" alt="client" class="my-2">
@@ -184,12 +186,27 @@
           </p>
         </div>
         <div class="card">
-          <img src="./assets/img/client.png" alt="client" class="my-2">
-          <h4 class="mt-2">Amanda Silva</h4>
-          <p class="mt-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-            Quis pellentesque vulputate at mattis nibh nulla est.
-            Pharetra, eget purus tortor nibh porta ipsum enim urna viverra.</p>
+          <img src="./assets/img/client3.jpg" alt="client" class="my-2">
+          <h4 class="mt-2">Davi Alvelos</h4>
+          <p class="mt-2">O que estou vendo nessa obra é um serviço até melhor de acabamento, 
+            as pintoras tem muito cuidado e são bem detalhistas, estão de parabéns.</p>
         </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="container py-5" id="clientes">
+    <div class="w-100">
+      <h2 class="title-section mb-3">Nossos Clientes</h2>
+      <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quis pellentesque vulputate at mattis nibh nulla est. 
+      Pharetra, eget purus tortor nibh porta ipsum enim urna viverra Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+      Quis pellentesque vulputate at mattis nibh nulla est. Pharetra, eget purus tortor nibh porta ipsum enim urna viverra..</p>
+      <div class="content-clients">
+        <img src="./assets/svg/jfilhos-removebg-preview 1.svg" alt="cliente construtora jfilhos">
+        <img src="./assets/svg/mva-removebg-preview 1.svg" alt="cliente construtora MVA Engenharia">
+        <img src="./assets/svg/tc-removebg-preview 1.svg" alt="cliente construtora TC Engenharia">
+        <img src="./assets/svg/redepresidete-removebg-preview 2.svg" alt="cliente Rede de Postos Presidente">
+        <img src="./assets/svg/gp-removebg-preview 1.svg" alt="cliente construtora GP Engenharia">
       </div>
     </div>
   </section>
@@ -197,11 +214,8 @@
   <section class="container py-5" id="reconhecimento">
     <div class="w-100">
       <h2 class="title-section mb-3">Reconhecimento</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quis pellentesque vulputate at mattis nibh nulla est.
-        Pharetra, eget purus tortor nibh porta ipsum enim urna viverra Lorem ipsum dolor sit amet, consectetur
-        adipiscing elit.
-        Quis pellentesque vulputate at mattis nibh nulla est.
-        Pharetra, eget purus tortor nibh porta ipsum enim urna viverra.</p>
+      <p>Em Março de 2022, Em nome de toda a Equipe da mulheres de Obra, a proprietária Rafaela Viana recebeu o troféu DELAS do Sebrae em Brasília, 
+        um prêmio conquistado por ser uma empresa de inovação no seu segmento, contando com um projeto social com o propósito de capacitar, formar e contratar mulheres na construção civil.</p>
       <div class="content-rewards d-flex flex-start mt-3">
         <div class="small-images flex-item-2">
           <img src="./assets/img/rewards1.png" alt="Reconhecimento Mulheres de Obra - Sebrae">
@@ -216,18 +230,30 @@
     </div>
   </section>
 
+  <section class="py-5 container" id="curso">
+    <div class="curso flex-item-1">
+      <h2 class="title-section mb-3">Seja uma pintora</h2>
+      <h3 class="mb-3">Gostaria de aprender técnicas de pintura e a realizar pequenos reparos residenciais?</h3>
+      <p class="mb-3">Periodicamente, a Mulheres de Obra forma novas turmas para treinar e 
+        capacitar mulheres interessadas em aprender técnicas de pinturas e a realizar pequenos reparos em suas residências, além de prepara-las para entrar no mercado de trabalho e conseguir uma nova profissão. 
+        Todas as mulheres que fazem parte da equipe, foram ex-alunas e formadas pelo nosso programa de capacitação.</p>
+      <button class="button-form">Preencha o formulário</button>
+    </div>
+  </section>
+
   <section class="py-5 contact" id="contato">
     <div class="container">
       <div class="w-100 d-flex flex-between">
         <div class="flex-item-1">
           <h2 class="title-section mb-3">Contato</h2>
           <h3 class="mb-3">Precisa de um orçamento? Mande-nos uma mensagem!</h3>
-          <p class="mb-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-            Quis pellentesque vulputate at mattis nibh nulla est.
-            Pharetra, eget purus tortor nibh porta ipsum enim urna viverra.</p>
+          <p class="mb-3">Preparação de superfícies, massa corrida, selador, pinturas, texturas e todo o resto! 
+            Somos especialistas nas etapas de acabamento de obras, sempre com limpeza e muita atenção aos mínimos detalhes.</p>
           <div class="d-flex flex-start">
-            <button class="mr-2 wpp-button"><img src="./assets/svg/whatsapp.svg" alt="whatsapp"> Fale Conosco</button>
-            <span class="link-button">Acompanhe</span>
+            <a href="https://bit.ly/3Db9cJc" target="_blank">
+              <button class="mr-2 wpp-button"><img src="./assets/svg/whatsapp.svg" alt="whatsapp"> Fale Conosco</button>
+            </a>
+            <a class="link-button" href="https://www.instagram.com/mulheresdeobra/" target="_blank">Acompanhe</a>
           </div>
         </div>
         <div class="flex-item-1 content-contact-symbols">
@@ -265,11 +291,13 @@
           <img src="./assets/svg/facebook.svg" alt="facebook">
           <img src="./assets/svg/youtube.svg" alt="youtube">
         </div>
+        <div class="lm">Feito com ♡ por <a href="https://github.com/Lincoln-Modesto" target="_blank">Lincoln Modesto</a></div>
       </div>
       <div class="logo-footer">
         <img src="./assets/svg/loog-big.svg" alt="logo mulheres de obra, tamanho grande">
       </div>
     </section>
+    
   </footer>
 
   <script src="./js/ancora.js"></script>
