--- a/index.html
+++ b/index.html
@@ -99,12 +99,8 @@
     <div class="flex-item-1">
       <div class="flex-item-1">
         <h2 class="title-section mb-3">Nossos Serviços</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quis pellentesque vulputate at mattis nibh nulla
-          est.
-          Pharetra, eget purus tortor nibh porta ipsum enim urna viverra Lorem ipsum dolor sit amet, consectetur
-          adipiscing elit.
-          Quis pellentesque vulputate at mattis nibh nulla est. Pharetra, eget purus tortor nibh porta ipsum enim urna
-          viverra.</p>
+        <p>A Mulheres de Obra tem uma gama de serviços para melhor atender a necessidade dos seus clientes, 
+          entendemos que nosso diferencial é o cuidado, limpeza e atenção aos mínimos detalhes durante a pintura e o acabamento de obras.</p>
       </div>
       <div class="d-flex flex-between content-services">
         <ul class="mt-3 mr-3">
@@ -114,8 +110,8 @@
             </div>
             <div>
               <h5>Preparação de superfícies, Massa corrida, Selador </h5>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing
-                elit. Tellus justo, eu pharetra lectus sed.</p>
+              <p>Etapa muitas vezes negligenciada, aqui nós entendemos a importância da preparação de superfícies
+                .</p>
             </div>
           </li>
           <li class="d-flex flex-start mt-3">
@@ -125,8 +121,7 @@
             <div>
               <h5>Pinturas</h5>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing
-                elit. Tellus justo, eu pharetra lectus sed.
+                Acrílica, epóxi, esmaltada, Latex, Cal.
               </p>
             </div>
           </li>
@@ -137,8 +132,7 @@
             <div>
               <h5>Texturas</h5>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing
-                elit. Tellus justo, eu pharetra lectus sed.
+                Especialistas em texturas de todos os tipos: chapiado, pátina, clássica, quadriculado, fulget.
               </p>
             </div>
           </li>
@@ -198,9 +192,9 @@
   <section class="container py-5" id="clientes">
     <div class="w-100">
       <h2 class="title-section mb-3">Nossos Clientes</h2>
-      <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quis pellentesque vulputate at mattis nibh nulla est. 
-      Pharetra, eget purus tortor nibh porta ipsum enim urna viverra Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-      Quis pellentesque vulputate at mattis nibh nulla est. Pharetra, eget purus tortor nibh porta ipsum enim urna viverra..</p>
+      <p class="mb-5">A Mulheres de Obra já realizou serviços em obras de grande porte, conjuntos habitacionais, grandes edificações, condomínios e casas de alto padrão,
+        temos expertise e conhecimento técnico para executar o acabamento da sua obra de forma impecável!
+         Esses são alguns dos nossos grandes clientes que atestam a qualidade dos nossos serviços</p>
       <div class="content-clients">
         <img src="./assets/svg/jfilhos-removebg-preview 1.svg" alt="cliente construtora jfilhos">
         <img src="./assets/svg/mva-removebg-preview 1.svg" alt="cliente construtora MVA Engenharia">
@@ -237,7 +231,9 @@
       <p class="mb-3">Periodicamente, a Mulheres de Obra forma novas turmas para treinar e 
         capacitar mulheres interessadas em aprender técnicas de pinturas e a realizar pequenos reparos em suas residências, além de prepara-las para entrar no mercado de trabalho e conseguir uma nova profissão. 
         Todas as mulheres que fazem parte da equipe, foram ex-alunas e formadas pelo nosso programa de capacitação.</p>
-      <button class="button-form">Preencha o formulário</button>
+      <a href="https://docs.google.com/forms/d/e/1FAIpQLSduvpm62D5U6jQhvmSRRHtzeatYgnIUWoZaDoepLSs0X51vog/viewform?usp=sf_link" target="_blank">
+        <button class="button-form">Preencha o formulário</button>
+      </a>
     </div>
   </section>
 
