finalização e ajustes finais

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
+<!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name=”description” content=”Unica empresa de construção e pinturas 100% feminina do estado de Sergipe“>
   <title>Mulheres de Obra</title>
   <link rel="icon" href="./assets/svg/logo.svg" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
